# TemporalGuard

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: annotation_guidelines.md  api_usage.md  benchmark_results.md  final_integration_validation.md  system_architecture.md  thesis_notes.md
frontend_next/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: smoke_test_live_api.py
skills/: 01_temporal_question_detection.md  02_claim_extraction.md  03_fresh_evidence_retrieval.md  04_source_freshness_scoring.md  05_temporal_verification.md  06_outdated_answer_detection.md  07_correction_generation.md  08_uncertainty_and_risk_labeling.md  09_evaluation_metrics.md  10_report_generation.md  11_pipeline_orchestration.md  12_llm_answer_generation.md  13_search_provider_integration.md  16_dataset_builder.md  17_benchmark_annotation_guidelines.md  18_api_backend_design.md  19_streamlit_frontend_dashboard.md  20_premium_frontend_redesign.md  21_error_handling_and_fallbacks.md  23_model_comparison_runner.md
tests/: test_annotation_validator.py  test_answer_generator.py  test_api_backend.py  test_claim_extractor.py  test_correction_generator.py  test_dataset_builder.py  test_error_handling.py  test_evaluation_metrics.py  test_fresh_evidence_retriever.py  test_llm_providers.py  test_model_comparison.py  test_outdated_answer_detector.py  test_pipeline_orchestrator.py  test_report_generator.py  test_search_providers.py  test_source_freshness_scorer.py  test_streamlit_helpers.py  test_temporal_question_detector.py  (+2 more)
(+68 files in other folders)
