[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporalguard"
version = "0.1.0"
description = "TemporalGuard scaffold for temporal verification and reporting"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "TemporalGuard"}]

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
